fixed jumping spacing issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,48 +9,46 @@ body {
 	top: 0%;
 }
 
-#main-convo {
-	width: 100%;
-	height: 100%;
-
-  display: table;
-  position: absolute;
-
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: cover;
-  background-image: url('../images/bg-1.jpg');
+#convo-table{
+	border: 4px solid blue;
 }
-
-#convo-content{
-	display: table-cell;
-	vertical-align: middle;
-}
-
 .outer{
 	display: table;
 	position: absolute;
 	height: 100%;
 	width: 100%;
+
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-size: cover;
+	background-image: url('../images/bg-1.jpg');
 }
 
+#convo-content{
+	border: 3px solid red;
+}
 .middle{
 	display: table-cell;
 	vertical-align: middle;
 }
 
+
 .inner{
+	border: 5px solid white;
   margin-left: auto;
 	margin-right: auto;
 	width: 75%;	/* 57% */
 
+	position: absolute;
+
   /*visibility: hidden; /* display: none */
-	display: none;
+	/*display: none;*/
 
 }
 
 .prompt-msg{
 	visibility: hidden;
+	position: absolute;
 }
 
 .active{
@@ -68,6 +66,16 @@ body {
 	width: 64px;
 	height: 64px;
 	margin: auto 0;
+}
+
+.email-form-buttons{
+
+
+}
+
+.convo-btns{
+	visibility: hidden;
+	position: absolute;
 }
 
 .hidden {
